--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>HTML Skeleton</title>
+    <title>International Students and their Paperwork</title>
 
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
@@ -19,40 +19,52 @@
 
     <body>
 
-      <h1>International Student From Morocco Wants to Make American her Home – and She is Also Helping Other Students to Do So</h1>
+      <h1>The International Price of a Dream:</h1>
+
+      <h1>how an international student made New Yok her home</h1>
 
       <p class='byline'> By Irene Spezzamonte </p>
 
 
-      <p> When Ghita Bensilmane came to the United States the first time in 2011 her heart was beating at the rhythm of the Star-Spangled Banner. She had spent her entire childhood in an American school in her hometown, Casablanca in Morocco and when the
-        moment to apply to college came, it was natural for her to start her American dream.</p>
+      <p> When Ghita Bensilmane came to the United States the first time in 2011 her heart was beating at the rhythm of the Star-Spangled Banner. She had spent her entire childhood in an American school in her homecountry and when the moment to apply to college
+        came, it was natural for her to start her American dream.</p>
 
+      <p> She then decided to go beyond her own dream and create more opportunity for international students at CUNY Graduate School of Journalism, where she is now a student</p>
+
+      <p> Originally from Casablanca, Morocco, Belsilmane came to the United States seven years ago. Her first american home was Boston </p>
+
+      <p> Bensilmane, then 20, decided to attend Boston University where she earned her Bachelor's degree. But after earning diploma,she was forced to go back to her native country because her visa even though she had the possibility to have a job at Snapchat.
+      </p>
+
+      <p> International students have to find a company that is willing to support a H-1b visa, also known as working visa, in order to be able to work and live in the United States. </p>
+
+      <p> Against Bensilmane's hopes, Snapchat was not able to sponsor her visa. </p>
+
+      <p> Thousands of international students apply every year for an H-1b visa, but only a specific number gets approved through a lottery system under the Immigration Act of 1990. </p>
+
+      <p>The year Bensilmane left the country, 2016, the United States Citizenship and Immigration Services received a total of 233,000 H-1B petitions, but only 65,000 were approved. </p>
+
+      <p>One year later, Bensilmane decided to come back to the United States to pursue her dream and so she enrolled for the Master’s degree in social journalism at CUNY Graduate School of Journalism. </p>
+
+      <p>This time she came to the big apple to stay. </p>
+
+      <p>She wasn’t thinking only about herself, however. She wanted to bring a change to the school that would have helped all international students at CUNY-J.</p>
 
       <div class="hotspot">
         <img src="profile1.jpg">
         <div id="fact1" class="spot" data-description='"My parents put me and my siblings in an American school because they thought it would have been great for our careers to learn English." Bensilmane, 24, said. "What it ended up happening was that
-        we became half American in our heads and culturally."'></div>
+          we became half American in our heads and culturally."'></div>
         <div id="fact2" class="spot" data-description='"’Till these days our parents don’t understand aspects of our identities that are pretty
-American." Bensilmane said.'></div>
+  American." Bensilmane said.'></div>
         <p class="cap">Ghita Bensilmane, 24, has been living the American dream since she entered the school system in Morocco, Photo Courtesy Ghita Bensilmane
         </p>
 
       </div>
 
-      <p> And so Boston University opened its door to Bensilmane and Bensilmane opened her heart to America. But after earning her bachelor' s degree, in 2016 she was forced to go back to her native country because her visa had expired and even though she
-        had the possibility to have a job at Snapchat, the company wouldn’t have been able to sponsor her H-1B visa, which would have allowed Belsilmane to work and live in the United States. </p>
-
-      <p>The year Bensilmane left the country, 2016, the United States Citizenship and Immigration Services received a total of 233,000 H-1B petitions, but only 65,000 were approved under the Immigration Act of 1990.</p>
-
-      <p> But Belsilmane was not done. </p>
-
-      <p>One year later she came back to the United States to pursue her Master’s degree in social journalism at CUNY Graduate School of Journalism and this time she came to the big apple to stay. She wasn’t thinking only about herself, however. She wanted
-        to bring a change to the school that would have helped all international students at CUNY-J.</p>
-
-      <p>Belsilmane decided to pen a letter to Dean Sarah Bartlett asking to designate the Master’s degree as STEM. This would have allowed international students to extend their work permit after graduation.</p>
+      <p>Belsilmane decided to pen a letter to Dean Sarah Bartlett asking to designate the Master’s degree as S.T.E.M. This would have allowed international students to extend their work permit after graduation by two extra years.</p>
 
       <p> International students can indeed apply for Optional Practical Training as soon as they graduate from an American college. The OPT is usually one year-long. However, if you graduate with a STEM degree you are allowed to extend your OPT for an additional
-        two years making it a total of three years during which an international students can stay in states and work. This is a great advantage for the 1 million international students currently studying in the country because under an international
+        two years making it a total of three years during which an international students can stay in States and work. This is a great advantage for the 1 million international students currently studying in the country because under an international
         student visa it is not possible to work. </p>
 
       <p> The restrictive laws and the election of Donald Trump had an impact on international students enrollement in the United States. Data from the United States Department of State - Bureau of Consular Affairs shows that the number of international students
@@ -68,18 +80,13 @@ American." Bensilmane said.'></div>
 
       <p> “This really changes our lives and careers, and our families will thanks you forever.” Costanza Gallardo added.</p>
 
-      <div class="hotspot">
-        <img src="profile2.jpg ">
-        <div id="fact3" class="spot " data-description='"It feels unfair that after four years of studying in the US they government kind of looks at you and says ‘thank you for your tuition, goodbye’ so that’s why I decided to do something about it. " Bensilmane
-        said.'></div>
-        <p class="cap"> After facing the challenges of being an international student in the United States, Bensilmane decided to help other international students. Photo Irene Spezzamonte
-        </p>
+      <div id="line" class="thick-line">
+        "It feels unfair that after four years of studying in the US they government kind of looks at you and says ‘thank you for your tuition, goodbye’ so that’s why I decided to do something about it."
       </div>
-
 
       <p>
         But Bensilmane was not done. She brought that change to Texas after she met Olivia Rempel, a fellow international student at UC Berkeley, while she was getting trained as a student leader with ProPublica's Documenting Hate project. There she told her
-        about the STEM designation and provided her with some advice on how to change the designation program at Berkley.
+        about the S.T.E.M. designation and provided her with some advice on how to change the designation program at Berkley.
       </p>
 
       <p>
