--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <h1>The International Price of a Dream:</h1>
 
-      <h1>how an international student made New Yok her home</h1>
+      <h1>how an international student made New York her home</h1>
 
       <p class='byline'> By Irene Spezzamonte </p>
 
